# Sparky-CIRC-2026

./: .gitignore  .gitmodules  Dockerfile  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.wsl.yml  docker-compose.yml  run.sh
.github/workflows/: ci.yml
scripts/: build.sh  docker-entrypoint.sh  setup.sh
src/cpp_demo_test/: CMakeLists.txt  package.xml
src/cpp_demo_test/test/: demo_test.cpp
src/hello_world/: CMakeLists.txt  package.xml
src/hello_world/src/: test_exec.cpp
src/osr_gazebo/: README.md  package.xml
src/osr_gazebo/launch/: empty_world.launch.py  rviz.launch.py
src/osr_gazebo/src/: osr_controller.cpp
